# pyexifwrangle

./: .gitignore  README.md  dev_how_to.md  example.py  pyproject.toml  setup.py  test_exif.csv
pyexifwrangle/: __init__.py  wrangle.py
tests/: generate_fixtures.py  test_wrangle.py
tests/fixtures/: aperture_sorted.csv  apertures.csv  counts.csv  exif_s21.csv  exif_s21_columns.csv  found_images.csv  found_images_all_columns.csv  front_apertures.csv  generate_fixtures.py  get_exif.csv  missing.csv  totals.csv
