[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexifwrangle"
version = "2023.9"
authors = [
  { name="Stephanie Reinders", email="reinders.stephanie@gmail.com" },
]
description = "A Python package for wrangling EXIF data extracted from images using Phil Harvey's EXIFTool."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CSAFE-ISU/pyexifwrangle"
"Bug Tracker" = "https://github.com/CSAFE-ISU/pyexifwrangle/issues"
